tests/typeck/valid/assignment.vit
space tests/typeck/valid/assignment

proc main() -> int {
  let value: int = 1;
  set value = value + 1;
  give value;
}
