tests/typeck/invalid/invalid_index.vit
space tests/typeck/invalid/invalid_index

proc main() -> int {
  let value = 1;
  give value[0];
}
